_sass/custom/custom.scss
.btn-yellow {
    @include btn-color($white, $yellow-300);
}

.site-header {
    border-bottom: 1px solid #eeebee;
}

.nav-list {
    .nav-list-item {
        .nav-list-link {
            padding: 0.75rem 1rem;
            border-radius: 8px;
            color: $body-heading-color;

            &:hover, &.active {
                background-image: none;
                background-color: #FFF6E0;
                color: $link-color !important;
            }
        }

        .nav-list-expander {
            width: 4rem;
            height: 4rem;
            padding: 1rem;
        }
    }
}

@media (min-width: 50rem) {
    .side-bar {
        flex-flow: column nowrap;
        position: fixed;
        height: 100%;
        border-right: 1px solid #eeebee;
        align-items: flex-end;

        .site-nav {
            padding: 1rem;

            .nav-list {
                .nav-list-item {
                    .nav-list-expander {
                        width: 3rem;
                        height: 3rem;
                        padding: 0.75rem;
                    }
                }
            } 
        }
    }

    .main {
        max-width: none;

        .main-header {
            z-index: 1;
            position: sticky;
            top: 0;
        }

        .main-content-wrap {
            max-width: 50rem;
        }
    }
}

@media (min-width: 66.5rem) {
    .side-bar {
        width: calc((100% - 70rem) / 2 +  20rem);
        min-width:  20rem;

        .site-header {
            width: 100%;

            .site-title {
                display: flex;
                justify-content: end;
                
                .site-logo {
                    width: 20rem;    
                }
                
            }
        }

        .site-nav {
            width: 20rem;
            display: block;
            padding: 1rem 1.5rem;
            overflow-y: auto;
            flex: 1 1 auto;
        }

        & + .main {
            margin-left: max( 20rem,(100% - 70rem) / 2 +  20rem);
        }
    }

}

